--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ matplotlib==2.2.2
 mccabe==0.6.1
 msgpack-python==0.5.6
 numba==0.46.0
-numpy==1.14.1
+numpy>=1.14.1,<1.18.0
 oauthlib==3.1.0
 pbr==4.0.2
 pluggy==0.13.1
