--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,11 @@
 [tox]
-envlist = py34, py35, py36
+envlist =
+    py34,
+    py35,
+    py36,
+    lint,
+    coverage
+skipsdist=True
 
 [travis]
 python =
@@ -7,9 +13,41 @@ python =
     3.5: py35
     3.4: py34
 
-[testenv]
-basepython = python
-deps =
-        -rrequirements.txt
-        -rrequirements-dev.txt
-commands = python -m unittest discover
+[testenv:py34]
+basepython = python3
+whitelist_externals = /bin/bash
+commands =
+    bash -c \'cat requirements.txt | xargs -L 1 pip3 install\'
+    bash -c \'cat requirements-dev.txt | xargs -L 1 pip3 install'
+    python3 -m unittest discover
+
+[testenv:py35]
+basepython = python3
+whitelist_externals = /bin/bash
+commands =
+    bash -c \'cat requirements.txt | xargs -L 1 pip3 install\'
+    bash -c \'cat requirements-dev.txt | xargs -L 1 pip3 install'
+    python3 -m unittest discover
+
+[testenv:py36]
+basepython = python3
+whitelist_externals = /bin/bash
+commands =
+    bash -c \'cat requirements.txt | xargs -L 1 pip3 install\'
+    bash -c \'cat requirements-dev.txt | xargs -L 1 pip3 install'
+    python3 -m unittest discover
+
+[testenv:lint]
+whitelist_externals = /bin/bash
+commands =
+    bash -c \'cat requirements-dev.txt | xargs -L 1 pip3 install'
+    pycodestyle subaligner tests --ignore=E203,E501,W503
+
+[testenv:coverage]
+basepython = python3
+whitelist_externals = /bin/bash
+commands =
+    bash -c \'cat requirements.txt | xargs -L 1 pip3 install\'
+    bash -c \'cat requirements-dev.txt | xargs -L 1 pip3 install'
+    coverage run --source subaligner -m unittest discover
+    coverage report --fail-under=85
