--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,4 +13,4 @@ pipelines:
           - pip3 install --upgrade pip
           - cat requirements.txt | xargs -L 1 pip install
           - cat requirements-dev.txt | xargs -L 1 pip install
-          - MAX_WORKERS=1 ENVIRONMENT=pipeline python3 -m unittest discover
+          - ENVIRONMENT=pipeline python3 -m unittest discover
