--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ addons:
   apt:
     update: true
 
+env:
+  - MAX_WORKERS=1
+
 install:
   - sudo apt-get -y install software-properties-common
   - sudo add-apt-repository -y ppa:mc3man/xerus-media
