--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,6 @@ google-auth==1.8.1
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
 graphviz==0.8.3
-grpcio==1.11.0
 h5py==2.8.0
 HeapDict==1.0.0
 html5lib==0.9999999
@@ -31,8 +30,8 @@ idna==2.8
 importlib-metadata==1.2.0
 isort==4.3.4
 joblib==0.11
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
+Keras-Applications>=1.0.8
+Keras-Preprocessing>=1.0.9
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 librosa==0.6.0
@@ -48,7 +47,6 @@ numpy>=1.14.1,<1.18.0
 oauthlib==3.1.0
 pbr==4.0.2
 pluggy==0.13.1
-protobuf==3.6.1
 psutil==5.4.6
 py==1.8.0
 pyasn1==0.4.8
@@ -70,12 +68,12 @@ requests-oauthlib==1.3.0
 resampy==0.2.0
 rsa==4.0
 scikit-learn==0.19.1
-scipy==1.0.1
-six==1.11.0
+scipy>=1.0.1
+six>=1.11.0
 snakeviz==1.0.0
 soupsieve==1.9
 tblib==1.3.2
-tensorflow>=1.12,<2.0
+tensorflow>=1.12,<2.2
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
