--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ graphviz==0.8.3
 h5py==2.8.0
 HeapDict==1.0.0
 html5lib==0.9999999
+hyperopt==0.2.4
 idna==2.8
 importlib-metadata==1.2.0
 isort==4.3.4
