--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -19,5 +19,5 @@ formats: all
 # Optionally set the version of Python and requirements required to build your docs
 python:
   version: 3.6
-  install:
-    - requirements: site/requirements-docs.txt
+#  install:
+#    - requirements: site/requirements-docs.txt
