improve docs and add Pipfile

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,18 @@
 [tox]
 envlist =
+    py36,
     py37,
     py38
 skipsdist=True
 skip_missing_interpreters = True
+
+[testenv:py36]
+basepython = python3.6
+whitelist_externals = /bin/bash
+commands =
+    bash -c \'cat requirements.txt | xargs -L 1 pip install\'
+    bash -c \'cat requirements-dev.txt | xargs -L 1 pip install'
+    python -m unittest discover
 
 [testenv:py37]
 basepython = python3.7
