--- a/requirements.txt
+++ b/requirements.txt
@@ -26,13 +26,12 @@ hyperopt==0.2.4
 idna==2.8
 importlib-metadata==1.2.0
 isort==4.3.4
-joblib==0.11
 Keras-Applications>=1.0.8
 Keras-Preprocessing>=1.0.9
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 le-pycaption==2.2.0a1
-librosa==0.6.0
+librosa>=0.6.0,<0.8.0
 locket==0.2.0
 Markdown==2.6.11
 mccabe==0.6.1
@@ -59,11 +58,9 @@ pytz==2018.4
 PyYAML>=4.2b1
 requests==2.22.0
 requests-oauthlib==1.3.0
-resampy==0.2.0
 rsa==4.0
 scipy>=1.4.1
 scikit-learn>=0.19.1
-snakeviz==1.0.0
 tblib==1.3.2
 tensorflow>=1.12,<2.3
 termcolor==1.1.0
