--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,4 +18,6 @@ formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.6
+  version: 3.7
+  install:
+    - requirements: requirements-site.txt
