--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,9 @@ mock = "==2.0.0"
 coverage = "==4.5.1"
 tox = "==3.15.0"
 pycodestyle = "==2.5.0"
-sphinx = "==2.3.1"
 sphinx-rtd-theme = "==0.4.3"
 twine = ">=3.1.1"
+Sphinx = "==2.3.1"
 
 [packages]
 aeneas = "==1.7.3.0"
@@ -25,36 +25,29 @@ certifi = "==2019.11.28"
 chardet = "==3.0.4"
 click = "==5.1"
 cloudpickle = "==0.5.3"
-cycler = "==0.10.0"
-cython = "==0.28.2"
 dask = "==0.15.0"
 decorator = "==4.3.0"
 distributed = "==1.13.0"
-enum34 = "==1.1.6"
 filelock = "==3.0.12"
 google-auth = "==1.8.1"
 google-auth-oauthlib = "==0.4.1"
 google-pasta = "==0.1.8"
 graphviz = "==0.8.3"
-heapdict = "==1.0.0"
 html5lib = "==0.9999999"
 hyperopt = "==0.2.4"
 idna = "==2.8"
 importlib-metadata = "==1.2.0"
 isort = "==4.3.4"
 joblib = "==0.11"
-keras-applications = ">=1.0.8"
-keras-preprocessing = ">=1.0.9"
 kiwisolver = "==1.0.1"
 lazy-object-proxy = "==1.3.1"
 le-pycaption = "==2.2.0a1"
-librosa = "==0.6.0"
+librosa = ">=0.8.0"
 locket = "==0.2.0"
-markdown = "==2.6.11"
 mccabe = "==0.6.1"
 msgpack-python = "==0.5.6"
-numba = "==0.46.0"
-numpy = "<1.18.0,>=1.14.1"
+numba = ">=0.50.0"
+numpy = ">=1.14.1,<1.18.0"
 oauthlib = "==3.1.0"
 pbr = "==4.0.2"
 pluggy = "==0.13.1"
@@ -72,7 +65,6 @@ pysrt = "==1.1.1"
 pystack-debugger = "==0.8.0"
 python-dateutil = "==2.7.2"
 pytz = "==2018.4"
-pyyaml = ">=4.2b1"
 requests = "==2.22.0"
 requests-oauthlib = "==1.3.0"
 resampy = "==0.2.0"
@@ -81,15 +73,22 @@ scipy = ">=1.4.1"
 scikit-learn = ">=0.19.1"
 snakeviz = "==1.0.0"
 tblib = "==1.3.2"
-tensorflow = ">=1.12,<2.3"
+tensorflow = "<2.3,>=1.12"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
 tornado = "==5.0.2"
 urllib3 = "==1.25.7"
-werkzeug = ">=0.15.3"
 zict = "==0.1.3"
 zipp = "==0.6.0"
+Cycler = "==0.10.0"
+Cython = "==0.28.2"
+HeapDict = "==1.0.0"
+Keras-Applications = ">=1.0.8"
+Keras-Preprocessing = ">=1.0.9"
+Markdown = "==2.6.11"
+PyYAML = ">=4.2b1"
+Werkzeug = ">=0.15.3"
 
 [requires]
 python_version = "3.7"
