--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ Cython==0.28.2
 dask==0.15.0
 decorator==4.3.0
 distributed==1.13.0
-enum34==1.1.6
 filelock==3.0.12
 google-auth==1.8.1
 google-auth-oauthlib==0.4.1
@@ -31,12 +30,12 @@ Keras-Preprocessing>=1.0.9
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 le-pycaption==2.2.0a1
-librosa>=0.6.0,<0.8.0
+librosa>=0.8.0
 locket==0.2.0
 Markdown==2.6.11
 mccabe==0.6.1
 msgpack-python==0.5.6
-numba==0.46.0
+numba>=0.50.0
 numpy>=1.14.1,<1.18.0
 oauthlib==3.1.0
 pbr==4.0.2
