--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ PyYAML>=4.2b1
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
-scipy>=1.4.1
+scipy==1.4.1
 scikit-learn>=0.19.1
 tblib==1.3.2
 tensorflow>=1.12,<2.3
