skip frame rate extraction on alignment with audio input

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ dist*
 .eggs
 tests/subaligner/resource/test.mp4.aac
 tests/subaligner/resource/test.mp4.wav
-tests/subaligner/resource/*_aligned.srt
+tests/subaligner/resource/*_aligned.*
 tests/subaligner/resource/test_mono.wav
 tests/subaligner/training.log
 tests/subaligner/output.log
