--- a/docker/Dockerfile-Ubuntu19
+++ b/docker/Dockerfile-Ubuntu19
@@ -4,6 +4,7 @@ FROM ubuntu:19.10
 RUN apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
+    apt-get -y install libsndfile-dev &&\
     apt-get -y install python3-dev &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
