--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ pylint==1.8.4
 pyparsing==2.2.0
 pyprof2calltree==1.4.3
 pysrt==1.1.1
+pysubs2==0.2.4
 pystack-debugger==0.8.0
 python-dateutil==2.7.2
 pytz==2018.4
