fix the installation on Ubuntu docker images and update Pipfile lock

--- a/docker/Dockerfile-Ubuntu18
+++ b/docker/Dockerfile-Ubuntu18
@@ -1,6 +1,8 @@
 # Subaligner Ubuntu 18 Docker Image
 FROM ubuntu:18.04
 
+ARG DEBIAN_FRONTEND=noninteractive
+ENV TZ=Europe/London
 RUN apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
