--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
 
 script:
   - coverage run -m unittest discover
-  - coverage report -m
+  - coverage combine
   - radish -b tests/integration/radish tests/integration/feature
 
 after_success:
