--- a/requirements-app.txt
+++ b/requirements-app.txt
@@ -20,6 +20,7 @@ google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
 graphviz==0.8.3
 HeapDict==1.0.0
+h5py<2.11.0
 html5lib==0.9999999
 hyperopt==0.2.4
 idna==2.8
@@ -61,6 +62,7 @@ requests-oauthlib==1.3.0
 rsa==4.0
 scipy==1.4.1
 scikit-learn>=0.19.1
+setuptools>=41.0.0
 tblib==1.3.2
 tensorflow>=1.12,<2.3
 termcolor==1.1.0
