--- a/Pipfile
+++ b/Pipfile
@@ -8,13 +8,19 @@ mock = "==2.0.0"
 coverage = "==4.5.1"
 tox = "==3.15.0"
 pycodestyle = "==2.5.0"
-sphinx-rtd-theme = "==0.4.3"
 twine = ">=3.1.1"
-Sphinx = "==2.3.1"
+snakeviz = "==2.1.0"
+sphinx = "==3.3.1"
+sphinx-rtd-theme = "==0.5.0"
+twine = ">=3.1.1"
+line-profiler = "==3.0.2"
+radish-bdd[bddxml] = "<=0.14.0"
+pex = "==2.1.15"
+mypy = "==0.790"
 
 [packages]
 aeneas = "==1.7.3.0"
-absl-py = "==0.7.0"
+absl-py = "~=0.10"
 astor = "==0.7.1"
 astroid = "==1.6.3"
 audioread = "==2.1.5"
@@ -31,7 +37,7 @@ distributed = "==1.13.0"
 filelock = "==3.0.12"
 google-auth = "==1.8.1"
 google-auth-oauthlib = "==0.4.1"
-google-pasta = "==0.1.8"
+google-pasta = "~=0.2"
 graphviz = "==0.8.3"
 html5lib = "==0.9999999"
 hyperopt = "==0.2.4"
@@ -47,7 +53,7 @@ locket = "==0.2.0"
 mccabe = "==0.6.1"
 msgpack-python = "==0.5.6"
 numba = ">=0.50.0"
-numpy = ">=1.14.1,<1.18.0"
+numpy = "~=1.19.2"
 oauthlib = "==3.1.0"
 pbr = "==4.0.2"
 pluggy = "==0.13.1"
@@ -73,7 +79,7 @@ scipy = ">=1.4.1"
 scikit-learn = ">=0.19.1"
 snakeviz = "==1.0.0"
 tblib = "==1.3.2"
-tensorflow = "<2.4,>=1.12"
+tensorflow = "<2.5,>=1.12"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
