--- a/docker/Dockerfile-CentOS8
+++ b/docker/Dockerfile-CentOS8
@@ -2,7 +2,8 @@
 From centos:8
 
 RUN dnf install -y epel-release dnf-utils &&\
-    yum-config-manager --set-enabled PowerTools &&\
+    yum install dnf-plugins-core &&\
+    yum-config-manager --set-enabled powertools &&\
     yum-config-manager --add-repo=https://negativo17.org/repos/epel-multimedia.repo &&\
     dnf install -y ffmpeg &&\
     dnf install -y espeak-ng &&\
