--- a/requirements-app.txt
+++ b/requirements-app.txt
@@ -1,4 +1,4 @@
-absl-py==0.7.0
+absl-py~=0.10
 astor==0.7.1
 astroid==1.6.3
 audioread==2.1.5
@@ -17,7 +17,7 @@ distributed==1.13.0
 filelock==3.0.12
 google-auth==1.8.1
 google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
+google-pasta~=0.2
 graphviz==0.8.3
 HeapDict==1.0.0
 h5py<2.11.0
@@ -37,7 +37,7 @@ Markdown==2.6.11
 mccabe==0.6.1
 msgpack-python==0.5.6
 numba>=0.50.0
-numpy>=1.14.1,<1.18.0
+numpy~=1.19.2
 oauthlib==3.1.0
 pbr==4.0.2
 pluggy==0.13.1
@@ -64,7 +64,7 @@ scipy==1.4.1
 scikit-learn>=0.19.1
 setuptools>=41.0.0
 tblib==1.3.2
-tensorflow>=1.12,<2.3
+tensorflow>=1.12,<2.5
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
