pass in the release tag to docker build

--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -1,6 +1,8 @@
 # ArchLinux base-devel-20201206.0.10501
 FROM archlinux:base-devel-20201206.0.10501
 
+ARG SOURCE_BRANCH
+
 # As of December 2020, Tensorflow does not support python 3.9 which is however a default on Arch
 ARG PYTHON=python-3.8.6-1-x86_64.pkg.tar.zst
 ARG PYTHON_PIP=python-pip-20.0.1-1-any.pkg.tar.zst
@@ -17,4 +19,4 @@ RUN pacman --noconfirm -Syu &&\
     ln -s /usr/lib/libffi.so.7 /usr/lib/libffi.so.6 &&\
     python /var/cache/get-pip.py &&\
     python -m pip install numpy &&\
-    python -m pip install subaligner
+    python -m pip install subaligner==${SOURCE_BRANCH:1}
