--- a/docker/Dockerfile-CentOS7
+++ b/docker/Dockerfile-CentOS7
@@ -1,6 +1,8 @@
 # Subaligner CentOS 7 Docker Image
 From centos:7
 
+ARG SOURCE_BRANCH
+
 RUN yum update -y &&\
     yum install -y epel-release &&\
     rpm -Uvh http://li.nux.ro/download/nux/dextop/el7/x86_64/nux-dextop-release-0-5.el7.nux.noarch.rpm &&\
@@ -14,4 +16,4 @@ RUN yum update -y &&\
     easy_install-3.6 pip &&\
     pip install --upgrade pip &&\
     python3 -m pip install numpy &&\
-    python3 -m pip install subaligner
+    python3 -m pip install subaligner==${SOURCE_BRANCH:1}
