--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -1,6 +1,8 @@
 # Subaligner Ubuntu 20 Docker Image
 FROM ubuntu:20.04
 
+ARG SOURCE_BRANCH
+
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
 RUN apt-get -y update &&\
@@ -12,4 +14,4 @@ RUN apt-get -y update &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
     python3 -m pip install numpy &&\
-    python3 -m pip install subaligner
+    python3 -m pip install subaligner==${SOURCE_BRANCH:1}
