--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -2,6 +2,7 @@
 FROM ubuntu:20.04
 
 ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH $SOURCE_BRANCH
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
