--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -2,6 +2,7 @@
 FROM archlinux:base-devel-20201206.0.10501
 
 ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH $SOURCE_BRANCH
 
 # As of December 2020, Tensorflow does not support python 3.9 which is however a default on Arch
 ARG PYTHON=python-3.8.6-1-x86_64.pkg.tar.zst
