--- a/docker/Dockerfile-CentOS8
+++ b/docker/Dockerfile-CentOS8
@@ -2,6 +2,7 @@
 From centos:8
 
 ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH $SOURCE_BRANCH
 
 RUN dnf install -y epel-release dnf-utils &&\
     yum install dnf-plugins-core &&\
