--- a/docker/Dockerfile-Debian10
+++ b/docker/Dockerfile-Debian10
@@ -2,6 +2,7 @@
 FROM debian:stable-20201209
 
 ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH $SOURCE_BRANCH
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
