--- a/docker/Dockerfile-Ubuntu18
+++ b/docker/Dockerfile-Ubuntu18
@@ -2,6 +2,7 @@
 FROM ubuntu:18.04
 
 ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH $SOURCE_BRANCH
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
