pin down the version for docker build due to the missing SOURCE_BRANCH

--- a/docker/Dockerfile-CentOS7
+++ b/docker/Dockerfile-CentOS7
@@ -1,8 +1,8 @@
 # Subaligner CentOS 7 Docker Image
 From centos:7
 
-ARG SOURCE_BRANCH
-ENV SOURCE_BRANCH $SOURCE_BRANCH
+# ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH v0.1.2
 
 RUN yum update -y &&\
     yum update-to -y openssl-libs-1:1.0.2k-21.el7_9 &&\
