--- a/docker/Dockerfile-CentOS8
+++ b/docker/Dockerfile-CentOS8
@@ -1,8 +1,8 @@
 # Subaligner CentOS 8 Docker Image
 From centos:8
 
-ARG SOURCE_BRANCH
-ENV SOURCE_BRANCH $SOURCE_BRANCH
+# ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH v0.1.2
 
 RUN dnf install -y epel-release dnf-utils &&\
     dnf update-to -y openssl-libs-1:1.1.1g-12.el8_3 &&\
