--- a/docker/Dockerfile-Fedora31
+++ b/docker/Dockerfile-Fedora31
@@ -1,8 +1,8 @@
 # Subaligner Fedora Docker Image
 From fedora:31
 
-ARG SOURCE_BRANCH
-ENV SOURCE_BRANCH $SOURCE_BRANCH
+# ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH v0.1.2
 
 RUN dnf install -y dnf-utils &&\
     yum install -y dnf-plugins-core &&\
