--- a/docker/Dockerfile-Ubuntu18
+++ b/docker/Dockerfile-Ubuntu18
@@ -1,8 +1,8 @@
 # Subaligner Ubuntu 18 Docker Image
 FROM ubuntu:18.04
 
-ARG SOURCE_BRANCH
-ENV SOURCE_BRANCH $SOURCE_BRANCH
+# ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH v0.1.2
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
