--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -1,8 +1,8 @@
 # Subaligner Ubuntu 20 Docker Image
 FROM ubuntu:20.04
 
-ARG SOURCE_BRANCH
-ENV SOURCE_BRANCH $SOURCE_BRANCH
+# ARG SOURCE_BRANCH
+ENV SOURCE_BRANCH v0.1.2
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
