--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,7 @@ mypy = "==0.790"
 aeneas = "==1.7.3.0"
 absl-py = "~=0.10"
 astor = "==0.7.1"
-astroid = "==1.6.3"
+astroid = "==2.4.0"
 audioread = "==2.1.5"
 beautifulsoup4 = "<4.9.0"
 bleach = "==3.3.0"
@@ -35,18 +35,18 @@ dask = "==0.15.0"
 decorator = "==4.3.0"
 distributed = "==1.13.0"
 filelock = "==3.0.12"
-google-auth = "==1.8.1"
-google-auth-oauthlib = "==0.4.1"
+google-auth = "==1.27.0"
+google-auth-oauthlib = "==0.4.2"
 google-pasta = "~=0.2"
 graphviz = "==0.8.3"
-html5lib = "==0.9999999"
+html5lib = "==1.0b9"
 hyperopt = "==0.2.4"
 idna = "==2.8"
 importlib-metadata = "==1.2.0"
 isort = "==4.3.4"
 joblib = "==0.11"
 kiwisolver = "==1.0.1"
-lazy-object-proxy = "==1.3.1"
+lazy-object-proxy = "==1.4.3"
 le-pycaption = "==2.2.0a1"
 librosa = ">=0.8.0"
 locket = "==0.2.0"
@@ -57,14 +57,14 @@ numpy = "~=1.19.2"
 oauthlib = "==3.1.0"
 pbr = "==4.0.2"
 pluggy = "==0.13.1"
-psutil = "==5.6.6"
-py = "==1.8.0"
+psutil = "==5.6.7"
+py = "==1.10.0"
 pyasn1 = "==0.4.8"
 pyasn1-modules = "==0.2.7"
 pydot = "==1.2.4"
 pydot-ng = "==1.0.0"
 pydotplus = "==2.0.2"
-pylint = "==1.8.4"
+pylint = "==2.5.0"
 pyparsing = "==2.2.0"
 pyprof2calltree = "==1.4.3"
 pysrt = "==1.1.1"
@@ -74,7 +74,7 @@ pytz = "==2018.4"
 requests = "==2.22.0"
 requests-oauthlib = "==1.3.0"
 resampy = "==0.2.0"
-rsa = "==4.0"
+rsa = "==4.7"
 scipy = ">=1.4.1"
 scikit-learn = ">=0.19.1"
 snakeviz = "==1.0.0"
@@ -83,8 +83,8 @@ tensorflow = "<2.5,>=1.12"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
-tornado = "==5.0.2"
-urllib3 = "==1.25.7"
+tornado = "==5.1.0"
+urllib3 = "==1.25.9"
 zict = "==0.1.3"
 zipp = "==0.6.0"
 Cycler = "==0.10.0"
