--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -8,7 +8,7 @@ ENV SOURCE_BRANCH v0.1.2
 ARG PYTHON=python-3.8.6-1-x86_64.pkg.tar.zst
 ARG PYTHON_PIP=python-pip-20.0.1-1-any.pkg.tar.zst
 
-RUN pacman --noconfirm -Syu &&\
+RUN ["/bin/bash", "-c", "pacman --noconfirm -Syu &&\
     pacman --noconfirm -Syu gcc ffmpeg espeak &&\
     pacman --noconfirm -Syu libsndfile &&\
     pacman --noconfirm -Syu libnsl &&\
@@ -20,4 +20,4 @@ RUN pacman --noconfirm -Syu &&\
     ln -s /usr/lib/libffi.so.7 /usr/lib/libffi.so.6 &&\
     python /var/cache/get-pip.py &&\
     python -m pip install numpy &&\
-    python -m pip install subaligner==${SOURCE_BRANCH:1}
+    python -m pip install subaligner==${SOURCE_BRANCH:1}"]
