--- a/docker/Dockerfile-CentOS7
+++ b/docker/Dockerfile-CentOS7
@@ -4,7 +4,7 @@ From centos:7
 # ARG SOURCE_BRANCH
 ENV SOURCE_BRANCH v0.1.2
 
-RUN yum update -y &&\
+RUN ["/bin/bash", "-c", "yum update -y &&\
     yum update-to -y openssl-libs-1:1.0.2k-21.el7_9 &&\
     yum install -y epel-release &&\
     rpm -Uvh http://li.nux.ro/download/nux/dextop/el7/x86_64/nux-dextop-release-0-5.el7.nux.noarch.rpm &&\
@@ -18,4 +18,4 @@ RUN yum update -y &&\
     easy_install-3.6 pip &&\
     pip install --upgrade pip &&\
     python3 -m pip install numpy &&\
-    python3 -m pip install subaligner==${SOURCE_BRANCH:1}
+    python3 -m pip install subaligner==${SOURCE_BRANCH:1}"]
