--- a/docker/Dockerfile-CentOS8
+++ b/docker/Dockerfile-CentOS8
@@ -4,7 +4,7 @@ From centos:8
 # ARG SOURCE_BRANCH
 ENV SOURCE_BRANCH v0.1.2
 
-RUN dnf install -y epel-release dnf-utils &&\
+RUN ["/bin/bash", "-c", "dnf install -y epel-release dnf-utils &&\
     dnf update-to -y openssl-libs-1:1.1.1g-12.el8_3 &&\
     yum install dnf-plugins-core &&\
     yum-config-manager --set-enabled powertools &&\
@@ -20,4 +20,4 @@ RUN dnf install -y epel-release dnf-utils &&\
     dnf install -y python3-pip &&\
     pip3 install --upgrade pip &&\
     python3 -m pip install numpy &&\
-    python3 -m pip install subaligner==${SOURCE_BRANCH:1}
+    python3 -m pip install subaligner==${SOURCE_BRANCH:1}"]
