--- a/docker/Dockerfile-Debian10
+++ b/docker/Dockerfile-Debian10
@@ -6,7 +6,7 @@ ENV SOURCE_BRANCH v0.1.2
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
-RUN apt-get -y update &&\
+RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
     apt-get -y install libsndfile-dev &&\
@@ -15,4 +15,4 @@ RUN apt-get -y update &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
     python3 -m pip install numpy &&\
-    python3 -m pip install subaligner==${SOURCE_BRANCH:1}
+    python3 -m pip install subaligner==${SOURCE_BRANCH:1}"]
