--- a/docker/Dockerfile-Fedora31
+++ b/docker/Dockerfile-Fedora31
@@ -4,7 +4,7 @@ From fedora:31
 # ARG SOURCE_BRANCH
 ENV SOURCE_BRANCH v0.1.2
 
-RUN dnf install -y dnf-utils &&\
+RUN ["/bin/bash", "-c", "dnf install -y dnf-utils &&\
     yum install -y dnf-plugins-core &&\
     dnf -y install https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm &&\
     dnf install -y ffmpeg &&\
@@ -18,4 +18,4 @@ RUN dnf install -y dnf-utils &&\
     dnf install -y python3-pip &&\
     pip3 install --upgrade pip &&\
     python3 -m pip install numpy &&\
-    python3 -m pip install subaligner==${SOURCE_BRANCH:1}
+    python3 -m pip install subaligner==${SOURCE_BRANCH:1}"]
