--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -8,10 +8,16 @@ ENV SOURCE_BRANCH v0.1.2
 ARG PYTHON=python-3.8.6-1-x86_64.pkg.tar.zst
 ARG PYTHON_PIP=python-pip-20.0.1-1-any.pkg.tar.zst
 
-RUN ["/bin/bash", "-c", "pacman --noconfirm -Syu &&\
-    pacman --noconfirm -Syu gcc ffmpeg espeak &&\
-    pacman --noconfirm -Syu libsndfile &&\
-    pacman --noconfirm -Syu libnsl &&\
+# WORKAROUND for glibc 2.33 and old Docker
+# See https://github.com/actions/virtual-environments/issues/2658
+# Thanks to https://github.com/lxqt/lxqt-panel/pull/1562
+RUN patched_glibc=glibc-linux4-2.33-4-x86_64.pkg.tar.zst && \
+    curl -LO "https://repo.archlinuxcn.org/x86_64/$patched_glibc" && \
+    bsdtar -C / -xvf "$patched_glibc"
+
+RUN ["/bin/bash", "-c", "pacman --noconfirm -Sy gcc ffmpeg espeak &&\
+    pacman --noconfirm -Sy libsndfile &&\
+    pacman --noconfirm -Sy libnsl &&\
     curl -o /var/cache/pacman/pkg/${PYTHON}  https://archive.archlinux.org/packages/p/python/${PYTHON}  &&\
     pacman --noconfirm -U /var/cache/pacman/pkg/${PYTHON} &&\
     curl -o /var/cache/pacman/pkg/${PYTHON_PIP} https://archive.archlinux.org/packages/p/python-pip/${PYTHON_PIP} &&\
