--- a/docker/Dockerfile-Fedora31
+++ b/docker/Dockerfile-Fedora31
@@ -1,8 +1,7 @@
 # Subaligner Fedora Docker Image
 From fedora:31
 
-# ARG SOURCE_BRANCH
-ENV SOURCE_BRANCH v0.1.2
+ARG RELEASE_VERSION
 
 RUN ["/bin/bash", "-c", "dnf install -y dnf-utils &&\
     yum install -y dnf-plugins-core &&\
@@ -18,4 +17,4 @@ RUN ["/bin/bash", "-c", "dnf install -y dnf-utils &&\
     dnf install -y python3-pip &&\
     pip3 install --upgrade pip &&\
     python3 -m pip install numpy &&\
-    python3 -m pip install subaligner==${SOURCE_BRANCH:1}"]
+    python3 -m pip install subaligner==${RELEASE_VERSION:1}"]
