--- a/docker/hooks/build
+++ b/docker/hooks/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker build -t $IMAGE_NAME -f $DOCKERFILE_PATH --build-arg RELEASE_VERSION=v0.1.2 .
+docker build -t $IMAGE_NAME -f $DOCKERFILE_PATH --build-arg RELEASE_VERSION=$SOURCE_BRANCH .
