--- a/Pipfile
+++ b/Pipfile
@@ -14,12 +14,12 @@ sphinx = "==3.3.1"
 sphinx-rtd-theme = "==0.5.0"
 twine = ">=3.1.1"
 line-profiler = "==3.0.2"
+scikit-build = "==0.11.1"
 radish-bdd[bddxml] = "<=0.14.0"
 pex = "==2.1.15"
 mypy = "==0.790"
 
 [packages]
-aeneas = "==1.7.3.0"
 absl-py = "~=0.10"
 astor = "==0.7.1"
 astroid = "==2.4.0"
@@ -39,10 +39,10 @@ google-auth = "==1.27.0"
 google-auth-oauthlib = "==0.4.2"
 google-pasta = "~=0.2"
 graphviz = "==0.8.3"
+h5py = "~=2.10.0"
 html5lib = "==1.0b9"
 hyperopt = "==0.2.4"
 idna = "==2.8"
-importlib-metadata = "==1.2.0"
 isort = "==4.3.4"
 joblib = "==0.11"
 kiwisolver = "==1.0.1"
@@ -76,11 +76,11 @@ requests = "==2.22.0"
 requests-oauthlib = "==1.3.0"
 resampy = "==0.2.0"
 rsa = "==4.7"
-scipy = ">=1.4.1"
+scipy = "~=1.5.4"
 scikit-learn = ">=0.19.1"
 snakeviz = "==1.0.0"
 tblib = "==1.3.2"
-tensorflow = "<2.5,>=1.12"
+tensorflow = ">=1.15.5,<2.5"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
@@ -89,13 +89,14 @@ urllib3 = "==1.25.9"
 zict = "==0.1.3"
 zipp = "==0.6.0"
 Cycler = "==0.10.0"
-Cython = "==0.28.2"
+Cython = "~=0.29.22"
 HeapDict = "==1.0.0"
 Keras-Applications = ">=1.0.8"
 Keras-Preprocessing = ">=1.0.9"
 Markdown = "==2.6.11"
 PyYAML = ">=4.2b1"
 Werkzeug = ">=0.15.3"
+aeneas = "==1.7.3.0"
 
 [requires]
 python_version = "3.7"
