--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,12 @@
-mock==2.0.0
+mock==4.0.3
 coverage==4.5.1
 tox==3.15.0
 pycodestyle==2.5.0
 twine>=3.1.1
 snakeviz==2.1.0
-line-profiler==3.0.2
+line-profiler==3.1.0
+scikit-build==0.11.1
 radish-bdd[bddxml]<=0.14.0
-pex==2.1.15
+pex==2.1.34
 mypy==0.790
 parameterized==0.8.1
