--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ audioread==2.1.5
 beautifulsoup4<4.9.0
 bleach==3.3.0
 cachetools==3.1.1
+captionstransformer~=1.2.1
 cchardet==2.1.7
 certifi==2019.11.28
 chardet==3.0.4
