--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 mock = "==2.0.0"
 coverage = "==4.5.1"
-tox = "==3.15.0"
+tox = "~=3.23.0"
 pycodestyle = "==2.5.0"
 twine = ">=3.1.1"
 snakeviz = "==2.1.0"
