--- a/docker/Dockerfile-CentOS8
+++ b/docker/Dockerfile-CentOS8
@@ -4,7 +4,7 @@ From centos:8
 ARG RELEASE_VERSION
 
 RUN ["/bin/bash", "-c", "dnf install -y epel-release dnf-utils &&\
-    dnf update-to -y openssl-libs-1:1.1.1g-12.el8_3 &&\
+    dnf upgrade -y openssl-libs bind-export-libs &&\
     yum install dnf-plugins-core &&\
     yum-config-manager --set-enabled powertools &&\
     yum-config-manager --add-repo=https://negativo17.org/repos/epel-multimedia.repo &&\
