--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -24,5 +24,5 @@ RUN ["/bin/bash", "-c", "pacman --noconfirm -Sy gcc ffmpeg espeak &&\
     curl -o /var/cache/get-pip.py https://bootstrap.pypa.io/get-pip.py &&\
     ln -s /usr/lib/libffi.so.7 /usr/lib/libffi.so.6 &&\
     python /var/cache/get-pip.py &&\
-    python -m pip install numpy &&\
+    python -m pip install 'numpy<1.20.0' &&\
     python -m pip install subaligner==${RELEASE_VERSION:1}"]
