--- a/docker/Dockerfile-CentOS7
+++ b/docker/Dockerfile-CentOS7
@@ -16,5 +16,5 @@ RUN ["/bin/bash", "-c", "yum update -y &&\
     yum install -y python36-setuptools &&\
     easy_install-3.6 pip &&\
     pip install --upgrade pip &&\
-    python3 -m pip install numpy &&\
+    python3 -m pip install 'numpy<1.20.0' &&\
     python3 -m pip install subaligner==${RELEASE_VERSION:1}"]
