--- a/docker/Dockerfile-Fedora31
+++ b/docker/Dockerfile-Fedora31
@@ -2,6 +2,9 @@
 From fedora:31
 
 ARG RELEASE_VERSION
+ENV DOCKER_BUILDKIT=0
+ENV COMPOSE_DOCKER_CLI_BUILD=0
+
 
 RUN ["/bin/bash", "-c", "dnf install -y dnf-utils &&\
     yum install -y dnf-plugins-core &&\
@@ -16,5 +19,5 @@ RUN ["/bin/bash", "-c", "dnf install -y dnf-utils &&\
     dnf install -y python3-devel &&\
     dnf install -y python3-pip &&\
     pip3 install --upgrade pip &&\
-    python3 -m pip install numpy &&\
+    python3 -m pip install 'numpy<1.20.0' &&\
     python3 -m pip install subaligner==${RELEASE_VERSION:1}"]
