--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -1,5 +1,5 @@
 # Subaligner Ubuntu 20 Docker Image
-FROM ubuntu:20.10
+FROM ubuntu:20.04
 
 ARG RELEASE_VERSION
 
@@ -13,5 +13,5 @@ RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
-    python3 -m pip install numpy &&\
+    python3 -m pip install 'numpy<1.20.0' &&\
     python3 -m pip install subaligner==${RELEASE_VERSION:1}"]
