--- a/requirements.txt
+++ b/requirements.txt
@@ -63,13 +63,16 @@ requests-oauthlib==1.3.0
 rsa==4.7
 scipy~=1.5.4
 scikit-learn>=0.19.1
+sentencepiece~=0.1.95
 setuptools>=41.0.0
 tblib==1.3.2
 tensorflow>=1.15.5,<2.5
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
+torch~=1.8.1
 tornado==5.1.0
+transformers~=4.5.1
 urllib3==1.25.9
 Werkzeug>=0.15.3
 zict==0.1.3
