--- a/requirements-app.txt
+++ b/requirements-app.txt
@@ -66,6 +66,7 @@ scipy~=1.5.4
 scikit-learn>=0.19.1
 sentencepiece~=0.1.95
 setuptools>=41.0.0
+six~=1.15.0
 tblib==1.3.2
 tensorflow>=1.15.5,<2.5
 termcolor==1.1.0
