--- a/requirements.txt
+++ b/requirements.txt
@@ -75,6 +75,7 @@ toolz==0.9.0
 torch~=1.8.1
 tornado==5.1.0
 transformers~=4.5.1
+typing-extensions~=3.7.0
 urllib3==1.25.9
 Werkzeug>=0.15.3
 zict==0.1.3
