--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -1,11 +1,7 @@
-# ArchLinux base-devel-20201206.0.10501
-FROM archlinux:base-devel-20201206.0.10501
+# ArchLinux base
+FROM archlinux:base
 
 ARG RELEASE_VERSION
-
-# As of December 2020, Tensorflow does not support python 3.9 which is however a default on Arch
-ARG PYTHON=python-3.8.6-1-x86_64.pkg.tar.zst
-ARG PYTHON_PIP=python-pip-20.0.1-1-any.pkg.tar.zst
 
 # WORKAROUND for glibc 2.33 and old Docker
 # See https://github.com/actions/virtual-environments/issues/2658
@@ -17,12 +13,7 @@ RUN patched_glibc=glibc-linux4-2.33-4-x86_64.pkg.tar.zst && \
 RUN ["/bin/bash", "-c", "pacman --noconfirm -Sy gcc ffmpeg espeak &&\
     pacman --noconfirm -Sy libsndfile &&\
     pacman --noconfirm -Sy libnsl &&\
-    curl -o /var/cache/pacman/pkg/${PYTHON}  https://archive.archlinux.org/packages/p/python/${PYTHON}  &&\
-    pacman --noconfirm -U /var/cache/pacman/pkg/${PYTHON} &&\
-    curl -o /var/cache/pacman/pkg/${PYTHON_PIP} https://archive.archlinux.org/packages/p/python-pip/${PYTHON_PIP} &&\
-    pacman --noconfirm -U /var/cache/pacman/pkg/${PYTHON_PIP} &&\
-    curl -o /var/cache/get-pip.py https://bootstrap.pypa.io/get-pip.py &&\
+    pacman --noconfirm -Syu python python-pip &&\
     ln -s /usr/lib/libffi.so.7 /usr/lib/libffi.so.6 &&\
-    python /var/cache/get-pip.py &&\
     python -m pip install 'numpy<1.20.0' &&\
     python -m pip install subaligner==${RELEASE_VERSION:1}"]
