--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -15,5 +15,6 @@ RUN ["/bin/bash", "-c", "pacman --noconfirm -Sy gcc ffmpeg espeak &&\
     pacman --noconfirm -Sy libnsl &&\
     pacman --noconfirm -Syu python python-pip &&\
     ln -s /usr/lib/libffi.so.7 /usr/lib/libffi.so.6 &&\
+    python -m pip install wheel &&\
     python -m pip install 'numpy<1.20.0' &&\
     python -m pip install subaligner==${RELEASE_VERSION:1}"]
