--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -16,5 +16,5 @@ RUN ["/bin/bash", "-c", "pacman --noconfirm -Sy gcc ffmpeg espeak &&\
     pacman --noconfirm -Syu python python-pip &&\
     ln -s /usr/lib/libffi.so.7 /usr/lib/libffi.so.6 &&\
     python -m pip install wheel &&\
-    python -m pip install 'numpy<1.20.0' &&\
+    python -m pip install 'numpy~=1.19.2' &&\
     python -m pip install subaligner==${RELEASE_VERSION:1}"]
