--- a/Pipfile
+++ b/Pipfile
@@ -10,14 +10,16 @@ tox = "~=3.23.0"
 pycodestyle = "==2.5.0"
 twine = ">=3.1.1"
 snakeviz = "==2.1.0"
-sphinx = "==3.3.1"
-sphinx-rtd-theme = "==0.5.0"
-twine = ">=3.1.1"
 line-profiler = "==3.0.2"
 scikit-build = "==0.11.1"
 radish-bdd = "~=0.13.3"
 pex = "==2.1.15"
 mypy = "==0.790"
+parameterized = "==0.8.1"
+pylint = "~=2.8.2"
+pygments = "~=2.7.4"
+sphinx = "==3.3.1"
+sphinx-rtd-theme = "==0.5.0"
 
 [packages]
 absl-py = "~=0.10"
@@ -32,6 +34,8 @@ certifi = "==2019.11.28"
 chardet = "==3.0.4"
 click = "==5.1"
 cloudpickle = "==0.5.3"
+cycler = "==0.10.0"
+Cython = "~=0.29.22"
 dask = "==0.15.0"
 decorator = "==4.3.0"
 distributed = "==1.13.0"
@@ -40,17 +44,21 @@ google-auth = "==1.27.0"
 google-auth-oauthlib = "==0.4.2"
 google-pasta = "~=0.2"
 graphviz = "==0.8.3"
+HeapDict = "==1.0.0"
 h5py = "~=2.10.0"
 html5lib = "==1.0b9"
 hyperopt = "==0.2.4"
 idna = "==2.8"
 isort = "==4.3.4"
 joblib = "==0.11"
+Keras-Applications = ">=1.0.8"
+Keras-Preprocessing = ">=1.0.9"
 kiwisolver = "==1.0.1"
 lazy-object-proxy = "==1.4.3"
 le-pycaption = "==2.2.0a1"
 librosa = ">=0.8.0"
 locket = "==0.2.0"
+Markdown = "==2.6.11"
 mccabe = "==0.6.1"
 msgpack-python = "==0.5.6"
 numba = ">=0.50.0"
@@ -73,30 +81,28 @@ pysubs2 = "==0.2.4"
 pystack-debugger = "==0.8.0"
 python-dateutil = "==2.7.2"
 pytz = "==2018.4"
+PyYAML = ">=4.2b1"
 requests = "==2.22.0"
 requests-oauthlib = "==1.3.0"
-resampy = "==0.2.0"
 rsa = "==4.7"
 scipy = "~=1.5.4"
 scikit-learn = ">=0.19.1"
-snakeviz = "==1.0.0"
+sentencepiece = "~=0.1.95"
+setuptools = ">=41.0.0"
+six = "~=1.15.0"
 tblib = "==1.3.2"
-tensorflow = ">=1.15.5,<2.5"
+tensorflow = ">=1.15.5,<2.6"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
+torch = "~=1.8.1"
 tornado = "==5.1.0"
-urllib3 = "==1.25.9"
+transformers = "~=4.5.1"
+typing-extensions = "~=3.7.0"
+urllib3 = "~=1.26.5"
+Werkzeug = ">=0.15.3"
 zict = "==0.1.3"
 zipp = "==0.6.0"
-Cycler = "==0.10.0"
-Cython = "~=0.29.22"
-HeapDict = "==1.0.0"
-Keras-Applications = ">=1.0.8"
-Keras-Preprocessing = ">=1.0.9"
-Markdown = "==2.6.11"
-PyYAML = ">=4.2b1"
-Werkzeug = ">=0.15.3"
 aeneas = "==1.7.3.0"
 
 [requires]
