--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ torch~=1.8.1
 tornado==5.1.0
 transformers~=4.5.1
 typing-extensions~=3.7.0
-urllib3==1.25.9
+urllib3~=1.26.5
 Werkzeug>=0.15.3
 zict==0.1.3
 zipp==0.6.0
