--- a/requirements-app.txt
+++ b/requirements-app.txt
@@ -1,6 +1,6 @@
 absl-py~=0.10
 astor==0.7.1
-astroid==2.4.0
+astroid~=2.5.6
 audioread==2.1.5
 beautifulsoup4<4.9.0
 bleach==3.3.0
@@ -58,7 +58,7 @@ pystack-debugger==0.8.0
 python-dateutil==2.7.2
 pytz==2018.4
 PyYAML>=4.2b1
-requests==2.22.0
+requests~=2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7
 scipy~=1.5.4
