--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cchardet==2.1.7
 certifi==2019.11.28
 chardet==3.0.4
 click==5.1
-cloudpickle==0.5.3
+cloudpickle~=1.6.0
 cycler==0.10.0
 Cython~=0.29.22
 dask==0.15.0
