--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -13,4 +13,4 @@ RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
-    python3 -m pip install subaligner[extra]==${RELEASE_VERSION:1}"]
+    python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION:1}'"]
