set max workers to one due to memory limit on ci

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -8,6 +8,8 @@ jobs:
   main:
 
     runs-on: ubuntu-latest
+    env:
+      MAX_WORKERS: 1
     strategy:
       matrix:
         python-version: [3.7]
