fix the release version

--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -3,8 +3,10 @@ FROM ubuntu:20.10
 
 ARG RELEASE_VERSION
 
-ARG DEBIAN_FRONTEND=noninteractive
+ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
+ENV RELEASE_VERSION=$RELEASE_VERSION
+
 RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
