--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -15,4 +15,4 @@ RUN apt-get -y update &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
-    python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION:1}'
+    python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION}'
