--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -41,10 +41,101 @@ jobs:
           context: ./docker
           file: "./docker/Dockerfile-Ubuntu20"
           build-args: |
-            RELEASE_VERSION=${{ steps.tag.outputs.TAG }}
+            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
           allow: network.host
           github-token: ${{ github.token }}
           tags: baxtree/subaligner:latest
+          push: true
+
+      - name: Build and push the Ubuntu 20 image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker
+          file: "./docker/Dockerfile-Ubuntu20"
+          build-args: |
+            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          allow: network.host
+          github-token: ${{ github.token }}
+          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.u20
+          push: true
+
+      - name: Build and push the Ubuntu 18 image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker
+          file: "./docker/Dockerfile-Ubuntu18"
+          build-args: |
+            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          allow: network.host
+          github-token: ${{ github.token }}
+          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.u18
+          push: true
+
+      - name: Build and push the Fedora 31 image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker
+          file: "./docker/Dockerfile-Fedora31"
+          build-args: |
+            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          allow: network.host
+          github-token: ${{ github.token }}
+          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.fed31
+          push: true
+
+      - name: Build and push the Debian 10 image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker
+          file: "./docker/Dockerfile-Debian10"
+          build-args: |
+            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          allow: network.host
+          github-token: ${{ github.token }}
+          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.deb10
+          push: true
+      
+      - name: Build and push the ArchLinux image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker
+          file: "./docker/Dockerfile-ArchLinux"
+          build-args: |
+            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          allow: network.host
+          github-token: ${{ github.token }}
+          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.arch
+          push: true
+
+      - name: Build and push the CentOS 8 image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker
+          file: "./docker/Dockerfile-CentOS8"
+          build-args: |
+            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          allow: network.host
+          github-token: ${{ github.token }}
+          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.el8
+          push: true
+
+      - name: Build and push the CentOS 7 image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker
+          file: "./docker/Dockerfile-CentOS7"
+          build-args: |
+            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          allow: network.host
+          github-token: ${{ github.token }}
+          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.el7
           push: true
 
       - name: Image digest
