--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -3,10 +3,11 @@ FROM ubuntu:20.10
 
 ARG RELEASE_VERSION
 
-ENV RELEASE_VERSION=v0.2.1
+ENV RELEASE_VERSION=${RELEASE_VERSION}
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
 
+RUN echo "$RELEASE_VERSION"
 RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
@@ -15,5 +16,5 @@ RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
-    python3 -m pip install 'subaligner==0.2.1' &&\
-    python3 -m pip install 'subaligner[harmony]==0.2.1'"]
+    python3 -m pip install \"subaligner==${RELEASE_VERSION}\" &&\
+    python3 -m pip install \"subaligner[harmony]==${RELEASE_VERSION}\""]
