update the Debian image

--- a/docker/Dockerfile-Debian10
+++ b/docker/Dockerfile-Debian10
@@ -1,5 +1,5 @@
 # Subaligner Debian docker image
-FROM debian:stable-20201209
+FROM debian:stable-20211011-slim
 
 ARG RELEASE_VERSION
 
@@ -7,13 +7,13 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV RELEASE_VERSION=${RELEASE_VERSION}
 ENV TZ=Europe/London
 
-RUN ["/bin/bash", "-c", "apt-get -y update &&\
-    apt-get -y install ffmpeg &&\
-    apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
-    apt-get -y install libsndfile-dev &&\
-    apt-get -y install python3-dev &&\
-    apt-get -y install python3-tk &&\
-    apt-get -y install python3-pip &&\
+RUN ["/bin/bash", "-c", "apt -y update &&\
+    apt -y install ffmpeg &&\
+    apt -y install espeak libespeak1 libespeak-dev espeak-data &&\
+    apt -y install libsndfile-dev &&\
+    apt -y install python3-dev &&\
+    apt -y install python3-tk &&\
+    apt -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
     python3 -m pip install \"subaligner==${RELEASE_VERSION}\" &&\
     python3 -m pip install \"subaligner[harmony]==${RELEASE_VERSION}\""]
