--- a/Pipfile
+++ b/Pipfile
@@ -36,7 +36,7 @@ click = "==5.1"
 cloudpickle = "==0.5.3"
 cycler = "==0.10.0"
 Cython = "~=0.29.22"
-dask = "==0.15.0"
+dask = ">=2021.10.0"
 decorator = "==4.3.0"
 distributed = "==1.13.0"
 filelock = "==3.0.12"
