--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -5,11 +5,23 @@ ARG RELEASE_VERSION
 
 ENV RELEASE_VERSION=${RELEASE_VERSION}
 
-RUN ["/bin/bash", "-c", "pacman --noconfirm -Sy gcc ffmpeg espeak-ng &&\
+RUN pacman --noconfirm -Sy pyenv
+
+RUN ["/bin/bash", "-c", "pacman --noconfirm -Syu &&\
+    pacman --noconfirm -Sy gcc ffmpeg espeak-ng &&\
     pacman --noconfirm -Sy libsndfile &&\
     pacman --noconfirm -Sy libnsl &&\
-    pacman --noconfirm -Syu python38 python-pip &&\
-    ln -s /usr/lib/libffi.so.7 /usr/lib/libffi.so.6 &&\
+    pacman --noconfirm -Sy --needed base-devel openssl zlib xz &&\
+    /usr/sbin/pyenv install 3.8.12 &&\
+    /usr/sbin/pyenv local 3.8.12 &&\
+    ln -s /root/.pyenv/versions/3.8.12/bin/python /usr/bin/python &&\
+    python -m venv venv &&\
+    source venv/bin/activate &&\
+    python -m pip install --upgrade pip &&\
     python -m pip install wheel &&\
     python -m pip install \"subaligner==${RELEASE_VERSION}\" &&\
-    python -m pip install \"subaligner[harmony]==${RELEASE_VERSION}\""]
+    python -m pip install \"subaligner[translation]==${RELEASE_VERSION}\""]
+
+COPY ./scripts/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
