generate subtitle via transcription

--- a/Pipfile
+++ b/Pipfile
@@ -64,6 +64,7 @@ msgpack-python = "==0.5.6"
 numba = ">=0.50.0"
 numpy = "<1.24.0"
 oauthlib = "==3.1.0"
+openai-whisper = "==20230124"
 pbr = "==4.0.2"
 pluggy = "==0.13.1"
 psutil = "==5.6.7"
@@ -95,7 +96,7 @@ tensorflow = ">=1.15.5,<2.9"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
-torch = "<=1.12.0"
+torch = "<1.13.0"
 tornado = "==5.1.0"
 transformers = "<4.27.0"
 typing-extensions = "~=3.7.0"
