--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -30,7 +30,7 @@ jobs:
           python -m pip install --upgrade pip
           cat requirements.txt | xargs -L 1 pip install
           cat requirements-stretch.txt | xargs -L 1 pip install
-          cat requirements-translation.txt | xargs -L 1 pip install
+          cat requirements-llm.txt | xargs -L 1 pip install
           cat requirements-dev.txt | xargs -L 1 pip install
           cat requirements-site.txt | xargs -L 1 pip install
           pip install -e . --ignore-installed
