--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -20,7 +20,7 @@ RUN ["/bin/bash", "-c", "pacman --noconfirm -Syu &&\
     python -m pip install --upgrade pip &&\
     python -m pip install wheel &&\
     python -m pip install \"subaligner==${RELEASE_VERSION}\" &&\
-    python -m pip install \"subaligner[translation]==${RELEASE_VERSION}\""]
+    python -m pip install \"subaligner[llm]==${RELEASE_VERSION}\""]
 
 COPY ./scripts/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
