--- a/Pipfile
+++ b/Pipfile
@@ -22,10 +22,8 @@ sphinx = "==3.3.1"
 sphinx-rtd-theme = "==0.5.0"
 
 [packages]
-absl-py = "~=0.10"
 astor = "==0.7.1"
 astroid = "~=2.5.6"
-audioread = "==2.1.5"
 beautifulsoup4 = "<4.9.0"
 bleach = "==3.3.0"
 cachetools = "==3.1.1"
@@ -56,11 +54,10 @@ Keras-Preprocessing = ">=1.0.9"
 kiwisolver = "==1.0.1"
 lazy-object-proxy = "==1.4.3"
 le-pycaption = "==2.2.0a1"
-librosa = ">=0.8.0"
+librosa = "<0.10.0"
 locket = "==0.2.0"
 Markdown = "==2.6.11"
 mccabe = "==0.6.1"
-msgpack-python = "==0.5.6"
 numba = ">=0.50.0"
 numpy = "<1.24.0"
 oauthlib = "==3.1.0"
@@ -92,7 +89,7 @@ sentencepiece = "~=0.1.95"
 setuptools = ">=41.0.0"
 six = "~=1.15.0"
 tblib = "==1.3.2"
-tensorflow = ">=1.15.5,<2.9"
+tensorflow = ">=1.15.5,<2.12"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
@@ -107,4 +104,4 @@ zipp = "==0.6.0"
 aeneas = "==1.7.3.0"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
