--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-absl-py~=0.10
 astor==0.7.1
-audioread==2.1.5
 beautifulsoup4<4.9.0
 bleach==3.3.0
 cachetools==3.1.1
@@ -16,7 +14,6 @@ dask<2022.1.0
 decorator==4.3.0
 distributed==1.13.0
 filelock<4.0.0
-google-auth==1.27.0
 google-auth-oauthlib==0.4.2
 google-pasta~=0.2
 graphviz==0.8.3
@@ -31,12 +28,11 @@ Keras-Preprocessing>=1.0.9
 kiwisolver==1.0.1
 lazy-object-proxy==1.4.3
 le-pycaption==2.2.0a1
-librosa>=0.8.0
+librosa<0.10.0
 locket==0.2.0
 Markdown==2.6.11
 mccabe==0.6.1
 networkx>=2.5.1
-msgpack-python==0.5.6
 numba>=0.50.0
 numpy<1.24.0
 oauthlib==3.1.0
@@ -59,11 +55,11 @@ requests~=2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7
 scipy<=1.8.1
-scikit-learn~=0.24.2
+scikit-learn<1.2.0
 setuptools>=41.0.0
 six~=1.15.0
 tblib==1.3.2
-tensorflow>=1.15.5,<2.9
+tensorflow>=1.15.5,<2.12
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
