--- a/Pipfile
+++ b/Pipfile
@@ -68,6 +68,7 @@ psutil = "==5.6.7"
 py = "==1.10.0"
 pyasn1 = "==0.4.8"
 pyasn1-modules = "==0.2.7"
+pycountry = "~=20.7.3"
 pydot = "==1.2.4"
 pydot-ng = "==1.0.0"
 pydotplus = "==2.0.2"
@@ -100,7 +101,6 @@ typing-extensions = "~=3.7.0"
 urllib3 = "~=1.26.5"
 Werkzeug = ">=0.15.3"
 zict = "==0.1.3"
-zipp = "==0.6.0"
 aeneas = "==1.7.3.0"
 
 [requires]
