--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ psutil==5.6.7
 py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
+pycountry~=20.7.3
 pydot==1.2.4
 pydot-ng==1.0.0
 pydotplus==2.0.2
@@ -52,7 +53,7 @@ pysubs2<=1.4.2
 pystack-debugger==0.8.0
 pytz==2018.4
 PyYAML>=4.2b1
-requests~=2.25.1
+requests<3.0.0
 requests-oauthlib==1.3.0
 rsa==4.7
 scipy<=1.8.1
@@ -60,7 +61,7 @@ scikit-learn<1.2.0
 setuptools>=41.0.0
 six~=1.15.0
 tblib==1.3.2
-tensorflow>=1.15.5,<2.12
+tensorflow>=1.15.5,<2.13
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
@@ -68,4 +69,3 @@ tornado==5.1.0
 urllib3~=1.26.5
 Werkzeug>=0.15.3
 zict==0.1.3
-zipp==0.6.0
